Added new features to jsGHIDE: Zip file, auto save, rename project

--- a/jsGHIDE/content/styles.css
+++ b/jsGHIDE/content/styles.css
@@ -344,6 +344,17 @@ li.testMenuItem:hover, li.objectMenuItem:hover, li.fileMenuItem:hover {
 	cursor: pointer;
 }
 
+.popzipIcon {
+	position: absolute;
+	top: 40px;
+	right: 40px;
+	z-index: 10000000;
+	background-color: white;
+	padding: 3px;
+	border-radius: 3px;
+	cursor: pointer;
+}
+
 .ui-dialog-title {
 	font-size: 10pt;
 	color: #000000 !important;
